# KasteRobot

./: .gitignore  INSTALLING MYSQL WITH MYSQLCPPCONN8 AND XDEVAPI.MD  InsertQueries.sql  README  README.MD  install_kasterobot.sh  kasteRobotSqlScript.sql  oldMakefile  readme.txt  rwsettings.xml  startupScript.txt
DB_conn/: .gitignore  ProjDB.txt
DB_conn/src/: CMakeLists.txt  DB_conn.cpp  qdatabase.cpp  qdatabase.h  qlinker.cpp  qlinker.h
GripperClient/: CMakeLists.txt  gripperclient.cpp  gripperclient.h  main.cpp
RC/src/: CMakeLists.txt  RobotControl.cpp  robotexeptions.h  ur_control.cpp  ur_control.h
UML/: hpp2uml_script.sh
pylon_openCV/: readme.txt
pylon_openCV/src/: .main.cpp.swp  CMakeLists.txt  basler_cam.cpp  basler_cam.h  imagehandler.cpp  imagehandler.h  main.cpp  ximagehandler.cpp
resources/XML_files/: Collision v1.wc.xml  CollisionModelV2.wc.xml  CollisionV2.wc.xml  Workcell.stl  Workcell_semester3 v13.stl
resources/XML_files/UR5_2017/: ProximitySetup.xml  UR5.wc.xml
resources/logcsv/: kast_051220_045927.csv  kast_051220_051202.csv  kast_051220_051228.csv  kast_051220_060136.csv  kast_051220_060323.csv  kast_051220_061210.csv  kast_051220_061355.csv  kast_061220_045935.csv  kast_061220_050232.csv  kast_061220_050707.csv  kast_061220_051822.csv  kast_071220_014625.csv  kast_071220_014926.csv  kast_071220_015047.csv  kast_071220_015638.csv  kast_071220_015854.csv  kast_071220_015954.csv  kast_071220_020223.csv  kast_071220_020338.csv  kast_071220_020400.csv  kast_071220_020514.csv  kast_071220_020526.csv  kast_071220_022037.csv  kast_071220_022214.csv  kast_071220_022232.csv  kast_071220_022241.csv  kast_071220_023405.csv  kast_071220_024015.csv  kast_071220_025424.csv  kast_071220_030813.csv  kast_071220_031552.csv  kast_071220_031642.csv  kast_071220_031803.csv  kast_071220_032137.csv  kast_071220_032856.csv  kast_071220_033248.csv  kast_071220_033348.csv  kast_071220_033455.csv  kast_071220_033530.csv  kast_071220_035328.csv  (+93 more)
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  includeheader.h  startupScript.txt
src/RobotControl/: RobotControl.cpp  ur_control.cpp  ur_control.h
src/database/: qdatabasehandler.cpp  qdatabasehandler.h  qdatabasehandler.hpp
src/gui/: cApp.cpp  cApp.h  cCamWorker.cpp  cCamWorker.h  cImagePanel.cpp  cImagePanel.h  cMain.cpp  cMain.h  capp.cpp  capp.h  cidbindings.hpp  cimagepanel.cpp  cimagepanel.h  cimagepanel.hpp  clinker.cpp  clinker.h  cmain.cpp  cmain.h  cmain.hpp  idbindings.h
src/logic/: globaldefs.hpp  startupScript.txt  xbaslercam.cpp  xbaslercam.h  xbaslercam.hpp  xcollisiondetector.cpp  xcollisiondetector.h  xcollisiondetector.hpp  xcontroller.cpp  xcontroller.h  xcontroller.hpp  xdetectcollision.cpp  xdetectcollision.h  xexceptions.h  xexceptions.hpp  xgeometrytypes.hpp  xgripperclient.cpp  xgripperclient.h  xgripperclient.hpp  ximagehandler.cpp  ximagehandler.h  ximagehandler.hpp  xinfostruct.hpp  xlinker.cpp  xlinker.h  xmath.cpp  xmath.hpp  xrobotexceptions.h  xur_control.cpp  xur_control.h  xurcontrol.cpp  xurcontrol.h  xurcontrol.hpp
src/logic/RobotControl/: xRobotControl.cpp  xur_control.cpp
uml/: hpp2uml_script.sh  plantuml_output.puml  plantuml_output_reduced.puml
